--- a/app/views/films/edit.html.erb
+++ b/app/views/films/edit.html.erb
@@ -1,4 +1,6 @@
-<div class="text-center">
-  <h1>Editar Pelicula</h1>
+<div class="container">
+  <div class="row justify-content-center">
+    <h1>Editar Pelicula</h1>
   <%= render 'form', button_name: "Editar Pelicula" %>
+  </div>
 </div>
