--- a/app/views/films/new.html.erb
+++ b/app/views/films/new.html.erb
@@ -1,4 +1,6 @@
-<div class="text-center">
-  <h1>Nueva Pelicula</h1>
+<div class="container">
+  <div class="row justify-content-center">
+    <h1>Nueva Pelicula</h1>
   <%= render 'form', button_name: "Guardar Pelicula" %>
+  </div>
 </div>
