Change Form and sleect_tag

--- a/app/views/films/index.html.erb
+++ b/app/views/films/index.html.erb
@@ -17,7 +17,7 @@
       <tbody>
         <% @films.each do |film| %>
           <tr class="success">
-            <td>film.id</td>
+            <td><%= film.id %></td>
             <td>film.title</td>
             <td>film.year</td>
             <td>
