--- a/app/views/films/_form.html.erb
+++ b/app/views/films/_form.html.erb
@@ -18,7 +18,7 @@
     <div class="form-group">
       <%= f.label :rating, "Puntuacion", for: "select", class: "col-lg-2 control-label"%>
       <div class="col-lg-10">
-        <% f.select(:rating, options_for_select(@ratingSelect), { prompt: "Puchurra para el puntaje" }, { :class => "form-control", :id => "select" })%>
+        <%= f.select(:rating, options_for_select(@ratingSelect, selected: "1"), { prompt: "Puchurra para el puntaje" }, { :class => "form-control", :id => "select" })%>
       </div>
     </div>
     <div class="form-group">
