--- a/app/views/films/index.html.erb
+++ b/app/views/films/index.html.erb
@@ -17,9 +17,10 @@
       <tbody>
         <% @films.each do |film| %>
           <tr class="success">
-            <td><%= film.id %></td>
-            <td>film.title</td>
-            <td>film.year</td>
+            <td><%=film.id %></td>
+            <td><%=film.title%></td>
+            <td><%=film.year%></td>
+            <td><%=film.rating%></td>
             <td>
                 <%= link_to "Ver", film_path(film.id), class: "btn btn-primary" %>
                 <%= link_to "Editar", edit_film_path(film.id), class: "btn btn-warning" %>
