--- a/app/views/films/show.html.erb
+++ b/app/views/films/show.html.erb
@@ -1,7 +1,31 @@
-<div class="text-center">
-  <h1><%= @film.title %></h1>
-  <br>
-  <p><%= @film.rating %></p>
-</div>
+<div class="container">
+  <%= form_for @film do |f| %>
+    <div class="form-group">
+      <br>
+      <label class="control-label" for="disabledInput">Titulo</label>
+      <%= f.text_field :title, class: "form-control", id: "disabledInput", type: "text", placeholder: "f.title", disabled: "" %>
+    </div>
 
-<%= link_to 'Regresar a peliculas', films_path, class: "btn btn-primary" %>
+    <div class="form-group">
+      <br>
+      <label class="control-label" for="disabledInput">Año</label>
+      <%= f.text_field :year, class: "form-control", id: "disabledInput", type: "text", placeholder: "f.year", disabled: "" %>
+    </div>
+    <div class="form-group">
+      <br>
+      <label class="control-label" for="disabledInput">Puntaje</label>
+      <%= f.text_field :rating, class: "form-control", id: "disabledInput", type: "text", placeholder: "f.rating", disabled: "" %>
+    </div>
+    <div class="form-group">
+      <br>
+      <label class="control-label" for="disabledInput">Descripción</label>
+      <%= f.text_field :description, class: "form-control", id: "disabledInput", type: "text", placeholder: "f.description", disabled: "" %>
+    </div>
+  </div>
+  <%end%>
+  <div class="form-group">
+        <div class="col-lg-10 col-lg-offset-2">
+          <%= link_to 'Regresar a peliculas', films_path, class: "btn btn-primary" %>
+        </div>
+  </div>
+</div>
