--- a/app/views/films/show.html.erb
+++ b/app/views/films/show.html.erb
@@ -21,6 +21,11 @@
       <label class="control-label" for="disabledInput">Descripción</label>
       <%= f.text_field :description, class: "form-control", id: "disabledInput", type: "text", placeholder: "f.description", disabled: "" %>
     </div>
+    <div class="form-group">
+      <br>
+      <label class="control-label" for="disabledInput">Imagen</label>
+      <%= image_tag(f.cover, :width => 65, :height => 75) if f.cover.present? %>
+    </div>
   </div>
   <%end%>
   <div class="form-group">
