--- a/app/views/films/index.html.erb
+++ b/app/views/films/index.html.erb
@@ -13,6 +13,9 @@
           <th>
             <%= link_to "Añadir pelicula", new_film_path ,class: "btn btn-success" %>
           </th>
+          <th>
+            <%= link_to "Log Out", destroy_user_session_path ,class: "btn btn-success" %>
+          </th>
         </tr>
       </thead>
       <tbody>
