--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,6 +3,7 @@
     <h1>Esta es una practica para Alexei de Peliculas</h1>
     <% if current_user %>
         <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: "btn btn-primary btn-lg" %>
+        <%= render 'form', button_name: "Listo" %>
     <% else %>
         <%= link_to 'Log In', new_user_session_path, class: "btn btn-primary btn-lg" %>
     <% end %>
