--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,39 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="container">
+    <br>
+    <div class="row">
+      <div class="col-sm-8">
+        <div class="panel panel-success">
+            <div class="panel-heading">Peliculas</div>
+          <div class="panel-body">
+            <% @films.each do |film| %>
+              <div>
+                  <%= image_tag(film.cover, :width => 65, :height => 75) if film.cover.present? %>
+                  <p class="text-primary"><h4> <%= film.title %></h4> rating: <%= film.rating %> </p>
+              </div>
+            <%end%>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title">¿Estas Logueado?</h3>
+            </div>
+            <div class="panel-body">
+              <% flash.each do |key, value| %>
+                <div class="alert alert-<%= key %> alert-dismissable">
+                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                    <%= value %>
+                </div>
+              <% end %>
+              <% if current_user %>
+                Welcome <%= current_user.email %> <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+                <% else %>
+    <%= link_to 'Login', new_user_session_path %>
+<% end %>
+            </div>
+          </div>
+      </div>
+
+      </div>
+</div>
