--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,6 +9,11 @@
               <div>
                   <%= image_tag(film.cover, :width => 65, :height => 75) if film.cover.present? %>
                   <p class="text-primary"><h4> <%= film.title %></h4> rating: <%= film.rating %> </p>
+                  <% if current_user %>
+                      
+                    <% else %>
+                      <%= link_to 'Login', new_user_session_path %>
+                  <% end %>
               </div>
             <%end%>
           </div>
@@ -27,10 +32,10 @@
                 </div>
               <% end %>
               <% if current_user %>
-                Welcome <%= current_user.email %> <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+                Bienvenida <%= current_user.email %> <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
                 <% else %>
-    <%= link_to 'Login', new_user_session_path %>
-<% end %>
+                  <%= link_to 'Login', new_user_session_path %>
+              <% end %>
             </div>
           </div>
       </div>
