--- a/app/views/films/index.html.erb
+++ b/app/views/films/index.html.erb
@@ -2,6 +2,7 @@
   <div class="row justify-content-center">
     <h1>Esta es una practica para Alexei de Peliculas</h1>
     <table class="table table-striped table-hover ">
+      
       <thead>
         <tr>
           <th>#</th>
@@ -34,6 +35,8 @@
           </tr>
         <%end%>
       </tbody>
+      <%= paginate @pages %>
+
     </table>
   </div>
 </div>
